--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 theme: jekyll-theme-hacker
 
+domain: nsu-fit-programming.github.io
+url: https://nsu-fit-programming.github.io
+
 title:       "Программирование"
 description: "Теория по курсу \"Программирование\" ФИТ НГУ"
 copyright:   "© Группа 21212"
