--- a/c-language/float_types/_config.yml
+++ b/c-language/float_types/_config.yml
@@ -1,5 +1,5 @@
-title:       "Полезные статьи"
-description: "Стресс-тестирование"
+title:       "Язык C"
+description: "Вещественные типы"
 copyright:   "© Группа 21212"
 
 header_pages:
