--- a/c-language/dynamic_allocation/_config.yml
+++ b/c-language/dynamic_allocation/_config.yml
@@ -1,5 +1,5 @@
 title:       "Язык C"
-description: "Выравнивание данных"
+description: "Функции работы с динамической памятью"
 copyright:   "© Группа 21212"
 
 header_pages:
