--- a/c-language/macro_definitions/_config.yml
+++ b/c-language/macro_definitions/_config.yml
@@ -1,5 +1,5 @@
 title:       "Язык C"
-description: "Функции работы с динамической памятью"
+description: "Препроцессор С. Макроопределения"
 copyright:   "© Группа 21212"
 
 header_pages:
