--- a/algorithms/buble_insert_selection/_config.yml
+++ b/algorithms/buble_insert_selection/_config.yml
@@ -1,6 +1,6 @@
 title:       "Язык C"
-description: "Вещественные типы"
-copyright:   "© Группа 21212"
+description: "Алгоритмы сортировки массива простым включением, простым выбором, «пузырьком»"
+copyright:   "© Группа 22210"
 
 header_pages:
   - index.md
